--- a/src/manifest.json
+++ b/src/manifest.json
@@ -21,7 +21,7 @@
     "tabs",
      "<all_urls>"
   ],
-  "content_security_policy": "script-src 'self' http://localhost:8097 'unsafe-eval'; object-src 'self'",
+  "content_security_policy": "script-src 'self' http://localhost:8097; object-src 'self'",
   "commands": {
     "_execute_browser_action": {
       "suggested_key": {
