removed all url permission. not needed for react-devtools

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -18,8 +18,7 @@
     ]
   },
   "permissions": [
-    "tabs",
-     "<all_urls>"
+    "tabs"
   ],
   "content_security_policy": "script-src 'self' http://localhost:8097; object-src 'self'",
   "commands": {
